Add scheme support

--- a/conf/fluent-bit-docker.conf
+++ b/conf/fluent-bit-docker.conf
@@ -13,6 +13,7 @@
     Match       dummy_input
     RabbitHost  localhost
     RabbitPort      5672
+    RabbitScheme amqp
     RabbitUser      rabbit
     RabbitPassword    rabbit
     ExchangeName   logs
