--- a/conf/fluent-bit.conf
+++ b/conf/fluent-bit.conf
@@ -22,4 +22,5 @@
     RemoveRkValuesFromRecord true
     AddTagToRecord false
     AddTimestampToRecord true
+    TimestampField publish_time
     RabbitVHost /jour
